--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,76 @@
 @import "wireframe-zapdos-blog/src/style.css";
 
 /* start here */
+
+.title {
+  text-transform: uppercase;
+  margin-bottom: 80px;
+
+  span {
+    max-width: 379px;
+  }
+}
+
+.articles-wrapper {
+  justify-content: space-around;
+}
+
+.article {
+  position: relative;
+  z-index: 2;
+  padding: 15px 45px 55px;
+  width: 95%;
+
+  &::after {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: var(--ui-light-shade-color) 15px solid;
+    opacity: 0.1;
+  }
+
+  &__meta {
+    position: relative;
+    margin-bottom: 40px;
+  }
+
+  &__category {
+    font-family: var(--ui-heading-font-family);
+    font-size: calc(var(--ui-hero-title-size) * 0.75);
+    font-weight: var(--ui-heading-font-weight);
+    position: absolute;
+    left: 0;
+    bottom: -20px;
+  }
+
+  &__date {
+    padding-left: 80px;
+
+    &::after {
+      display: none;
+    }
+  }
+
+  &__title {
+    text-transform: uppercase;
+  }
+}
+
+@media (min-width: 992px) {
+  .article:nth-last-of-type(3):first-child,
+  .article:nth-last-of-type(3):first-child ~ .article {
+    flex-basis: 31%;
+    max-width: 31%;
+  }
+}
+
+@media (min-width: 768px) {
+  .article {
+    flex-basis: 48%;
+    max-width: 48%;
+  }
+}
