--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,34 @@
 @import "wireframe-zapdos-cta/src/style.css";
 
 /* start here */
+
+@media (min-width: 992px) {
+  .section {
+    padding-top: 160px;
+    padding-bottom: 160px;
+  }
+}
+
+.title {
+  font-family: var(--ui-hero-title-font-family);
+  font-size: calc(var(--ui-block-title-size)*1.195);
+  font-style: var(--ui-hero-title-font-style);
+  font-weight: var(--ui-hero-title-font-weight);
+  color: var(--ui-light-accent-color);
+  line-height: calc(var(--ui-block-title-line-height)*0.9);
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  margin-bottom: 35px;
+}
+
+.description {
+  font-weight: var(--ui-subtitle-font-weight);
+  font-size: var(--ui-subtitle-size);
+  line-height: var(--ui-subtitle-line-height);
+  color: var(--ui-heading-lg-color);
+  letter-spacing: 0.6px;
+}
+
+.button {
+  text-transform: uppercase;
+}
