--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,52 @@
 @import "wireframe-zapdos-why/src/style.css";
 
 /* start here */
+
+.section {
+
+  @media (min-width: 992px) {
+    padding: 57px 0 65px;
+  }
+
+  @media (min-width: 768px) {
+    padding: 60px 0 50px;
+  }
+}
+
+.item {
+  font-size: calc(var(--ui-text-size) * 1.071);
+
+  &__top-element {
+    width: 68px;
+    height: 68px;
+    line-height: 68px;
+    padding: 0;
+    margin-bottom: 24px;
+
+    svg {
+      max-width: 100%;
+      max-height: 100%;
+    }
+  }
+
+  &__title {
+    position: relative;
+    text-transform: uppercase;
+    font-size: calc(var(--ui-heading-size) * 0.8);
+    line-height: calc(var(--ui-heading-line-height) * 1.127);
+    font-weight: bold;
+    padding-bottom: 18px;
+    margin: 0 auto 14px;
+
+    &::after {
+      content: "";
+      position: absolute;
+      width: 36px;
+      height: 4px;
+      bottom: 0;
+      left: 50%;
+      transform: translateX(-50%);
+      background-color: var(--ui-light-accent-color);
+    }
+  }
+}
