--- a/src/style.css
+++ b/src/style.css
@@ -3,17 +3,19 @@
 /* start here */
 
 .section {
+  padding: 20px 0 50px;
 
   @media (min-width: 992px) {
-    padding: 57px 0 65px;
+    padding: 45px 0 75px;
   }
 
   @media (min-width: 768px) {
-    padding: 60px 0 50px;
+    padding: 30px 0 60px;
   }
 }
 
 .item {
+  margin-top: 30px;
   font-size: calc(var(--ui-text-size) * 1.071);
 
   &__top-element {
