--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,18 @@
 @import "wireframe-zapdos-cta/src/style.css";
 
 /* start here */
+.button {
+  text-transform: uppercase;
+}
+
+.section {
+  &__inner {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+}
+
+.title {
+  text-align: left;
+}
