--- a/src/style.css
+++ b/src/style.css
@@ -42,28 +42,43 @@
 
   &__desc {
     letter-spacing: 0.3px;
+    font-size: calc(var(--ui-text-size) * 0.88);
 
-    @media (min-width: 1200px) {
+    @media (min-width: 480px) {
       font-size: var(--ui-text-size);
-    }
-
-    p {
-      color: var(--ui-dark-shade-color);
-      font-weight: 700;
-      font-size: calc(var(--ui-text-size) * 1.25);
-      margin-top: 15px;
     }
   }
 
   &-list {
+    display: flex;
+    flex-direction: column;
+
     &__item {
       margin-bottom: 15px;
 
       &:nth-of-type(1) {
+        order: 1;
+        margin-bottom: 20px;
+
         .contacts__title {
           margin-bottom: 25px;
           display: block;
         }
+      }
+
+      &:nth-of-type(2) {
+        order: 3;
+
+        .contacts__desc {
+          color: var(--ui-dark-shade-color);
+          font-weight: 700;
+          font-size: calc(var(--ui-text-size) * 1.25);
+        }
+      }
+
+      &:nth-of-type(3) {
+        order: 2;
+        margin-bottom: 18px;
       }
     }
   }
