--- a/src/style.css
+++ b/src/style.css
@@ -8,7 +8,7 @@
   }
 
   &__inner {
-    max-width: 790px;
+    max-width: 798px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -42,9 +42,18 @@
 .description {
   font-size: var(--ui-subtitle-size);
   margin-bottom: 0;
+
+  @media (min-width: 768px) {
+    text-align: left;
+  }
 }
 
 .button {
   text-transform: uppercase;
   font-weight: 700;
+
+  @media (min-width: 768px) {
+    flex-shrink: 0;
+    max-width: 50%;
+  }
 }
