--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,50 @@
 @import "wireframe-zapdos-why/src/style.css";
 
 /* start here */
+.section {
+  padding: 115px 0;
+}
+
+.title {
+  text-transform: uppercase;
+  max-width: 380px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 40px;
+}
+
+.item {
+  border: 15px solid #1a1347;
+  margin-bottom: 30px;
+  margin-left: 15px;
+  margin-right: 15px;
+
+  @media (min-width: 768px) {
+    flex-basis: 46%;
+    max-width: 46%;
+  }
+
+  &__title {
+    text-transform: uppercase;
+
+    &:last-child {
+      margin-bottom: 40px;
+    }
+  }
+
+  &__top-element {
+    width: 80px;
+    height: 80px;
+    margin-bottom: 35px;
+    margin-top: 45px;
+  }
+}
+
+.item:nth-last-of-type(4):first-child,
+.item:nth-last-of-type(4):first-child ~ .item {
+
+  @media (min-width: 992px) {
+    flex-basis: 22%;
+    max-width: 22%;
+  }
+}
