--- a/src/style.css
+++ b/src/style.css
@@ -4,10 +4,6 @@
   flex-basis: 33.33%;
   max-width: 33.33%;
 
-  &:nth-child(4) {
-    display: none;
-  }
-
   &__picture {
     padding-top: 120%;
   }
@@ -17,10 +13,9 @@
   }
 
   &__text {
-    font-weight: calc(var(--ui-text-font-weight) + 100);
+    font-weight: var(--ui-subheading-font-weight);
     text-align: center;
     color: var(--ui-brand-color);
-
   }
 }
 
