--- a/src/style.css
+++ b/src/style.css
@@ -1,30 +1,27 @@
 @import "wireframe-zapdos-awards/src/style.css";
 
-.section {
-  background-color: var(--ui-dark-shade-color);
-}
-
 .title {
   letter-spacing: -0.7px;
 }
 
+.items-wrapper {
+  margin-top: 30px;
+  z-index: 99;
+}
+
 .item {
-  &s-wrapper {
-    margin-top: 30px;
-  }
+  z-index: 99;
 
   &__picture {
+    display: block;
     position: relative;
     margin: 0 auto;
     width: 102.6px;
     padding-top: 102.6px;
     background-color: #2b2b2b;
-    border: 16.4px solid #444;
-    border-left-color: var(--ui-dark-shade-color);
-    border-bottom-color: var(--ui-dark-shade-color);
     border-radius: 50%;
     box-sizing: content-box;
-    transform: rotate(45deg);
+    z-index: 99;
 
     &::before,
     &::after {
@@ -34,19 +31,21 @@
       border: 1px solid rgba(255, 255, 255, 0.1);
       border-radius: 50%;
     }
-
+    
     &::before {
-      width: 135.4px;
-      height: 135.4px;
-      top: -17px;
-      left: -17px;
-    }
-
-    &::after {
       width: 166.6px;
       height: 166.6px;
       top: -33px;
       left: -33px;
+    }
+
+    &::after {
+      z-index: -1;
+      width: 135.4px;
+      height: 135.4px;
+      top: -17px;
+      left: -17px;
+      background: linear-gradient(90deg, transparent 0%, transparent 49%, rgba(68, 68, 68, 1) 50%, rgba(68, 68, 68, 1) 100%);
     }
   }
 
@@ -55,8 +54,9 @@
     height: auto;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%) rotate(-45deg);
+    transform: translate(-50%, -50%);
     object-fit: contain;
+    z-index: 99;
   }
 
   &__title {
