--- a/src/style.css
+++ b/src/style.css
@@ -4,13 +4,10 @@
   letter-spacing: -0.7px;
 }
 
-.items-wrapper {
-  margin-top: 30px;
-  z-index: 99;
-}
-
 .item {
-  z-index: 99;
+  &s-wrapper {
+    margin-top: 30px;
+  }
 
   &__picture {
     display: block;
@@ -20,32 +17,30 @@
     padding-top: 102.6px;
     background-color: #2b2b2b;
     border-radius: 50%;
-    box-sizing: content-box;
-    z-index: 99;
 
-    &::before,
-    &::after {
-      content: "";
-      display: block;
-      position: absolute;
-      border: 1px solid rgba(255, 255, 255, 0.1);
-      border-radius: 50%;
-    }
-    
-    &::before {
-      width: 166.6px;
-      height: 166.6px;
-      top: -33px;
-      left: -33px;
-    }
+    &-wrapper {
+      &::before,
+      &::after {
+        content: "";
+        display: block;
+        position: absolute;
+        border: 1px solid rgba(255, 255, 255, 0.1);
+        border-radius: 50%;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
 
-    &::after {
-      z-index: -1;
-      width: 135.4px;
-      height: 135.4px;
-      top: -17px;
-      left: -17px;
-      background: linear-gradient(90deg, transparent 0%, transparent 49%, rgba(68, 68, 68, 1) 50%, rgba(68, 68, 68, 1) 100%);
+      &::before {
+        width: 135.4px;
+        height: 135.4px;
+        background: linear-gradient(90deg, transparent 0%, transparent 49%, rgba(68, 68, 68, 1) 50%, rgba(68, 68, 68, 1) 100%);
+      }
+
+      &::after {
+        width: 166.6px;
+        height: 166.6px;
+      }
     }
   }
 
@@ -56,7 +51,6 @@
     left: 50%;
     transform: translate(-50%, -50%);
     object-fit: contain;
-    z-index: 99;
   }
 
   &__title {
