--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,43 @@
-@import "wireframe-default-master/src/style.css";
+@import "wireframe-series-1-quote/src/style.css";
 
 /* start here */
+.author {
+  color: var(--ui-brand-color);
+  font-weight: calc(var(--ui-text-font-weight)*1.5);
+  text-transform: uppercase;
+  max-width: 770px;
+  text-align: left;
+
+  @media (min-width: 992px) {
+    margin-top: 20px;
+  }
+}
+
+.blockquote {
+  color: var(--ui-light-shade-color);
+  letter-spacing: 1px;
+  max-width: 770px;
+  text-align: left;
+  position: relative;
+
+  &::before {
+    display: none;
+  }
+
+  &__line {
+    color: var(--ui-brand-color);
+    width: auto;
+    display: inline-block;
+    position: absolute;
+    left: -40px;
+    top: 0;
+
+    &::before {
+      display: none;
+    }
+
+    &::after {
+      display: none;
+    }
+  }
+}
