--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,116 @@
 @import "wireframe-zapdos-services/src/style.css";
 
 /* start here */
+
+.section {
+  padding-top: 40px;
+  padding-bottom: 40px;
+
+  @media (min-width: 1200px) {
+    padding-top: 95px;
+    padding-bottom: 95px;
+  }
+
+  &__header {
+    padding-top: 0;
+  }
+
+  &__inner {
+    max-width: 1900px;
+
+    @media (min-width: 1200px) {
+      justify-content: space-between;
+    }
+  }
+}
+
+.title {
+  font-size: calc( var(--ui-block-title-size) * 36/46 );
+}
+
+.articles-wrapper {
+  justify-content: center;
+  padding-left: 10px;
+  padding-right: 10px;
+
+  @media (min-width: 768px) {
+    justify-content: flex-start;
+  }
+
+  @media (min-width: 1200px) {
+    justify-content: space-between;
+  }
+}
+
+.article {
+  max-width: 500px;
+  margin-bottom: 0;
+  padding: 40px 10px 20px;
+  text-align: center;
+  border: 4px solid transparent;
+
+  @media (min-width: 992px) {
+    flex-basis: calc( (100% / 3) - 10px );
+
+    &__text,
+    &__link {
+      opacity: 0;
+    }
+
+    &__link:focus {
+      opacity: 1;
+    }
+
+    &:hover {
+      border-color: var(--ui-link-hover-color);
+
+      .article {
+        &__text,
+        &__link {
+          opacity: 1;
+        }
+      }
+    }
+  }
+
+  @media (min-width: 1200px) {
+    max-width: 370px;
+    flex-basis: calc(20% - 10px);
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  &__picture-wrapper {
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+
+    @media (min-width: 768px) {
+      width: 95%;
+    }
+  }
+
+  &__picture {
+    background-color: transparent;
+
+    @media (min-width: 992px) {
+      padding-top: 80%;
+    }
+  }
+
+  &__image {
+    height: auto;
+    top: auto;
+    bottom: 0;
+  }
+
+  &__title {
+    font-size: calc( var(--ui-heading-size) * 24/30 );
+    line-height: calc( var(--ui-heading-line-height ) * 1.5/1.33 );
+    white-space: pre-wrap;
+  }
+
+  &__link {
+    letter-spacing: 0.65px;
+  }
+}
