--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,22 @@
 @import "wireframe-zapdos-about/src/style.css";
 
 /* start here */
+.article {
+  &__picture {
+    padding-top: 0;
+    position: relative;
+    border: 15px solid #1a1347;
+    max-width: 100%;
+  }
+
+  &__title {
+    color: #fefefe;
+    text-transform: uppercase;
+    margin-bottom: 40px;
+  }
+
+  &__text {
+    color: #d7d2d2;
+    margin-bottom: 40px;
+  }
+}
