--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,37 @@
-@import "wireframe-default-master/src/style.css";
+@import "wireframe-zapdos-awards/src/style.css";
 
 /* start here */
+.title {
+  letter-spacing: -0.02em;
+  margin-top: 30px;
+  margin-bottom: 30px;
+
+  @media (min-width: 992px) {
+    margin-top: 85px;
+    margin-bottom: 85px;
+  }
+}
+
+@media (min-width: 992px) {
+  .items-wrapper {
+    padding-left: 152px;
+    padding-right: 152px;
+  }
+}
+
+.item {
+  margin-bottom: 30px;
+
+  @media (min-width: 992px) {
+    margin-bottom: 110px;
+  }
+
+  &__picture {
+    background-color: transparent;
+    padding-top: 52%;
+  }
+
+  &__image {
+    object-fit: contain;
+  }
+}
