--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,7 @@
   color: var(--ui-light-shade-color);
   font-family: var(--ui-hero-title-font-family);
   font-weight: var(--ui-hero-title-font-weight);
+  margin-bottom: 34px;
 }
 
 .subtitle {
