--- a/src/style.css
+++ b/src/style.css
@@ -79,6 +79,9 @@
   padding: 0 5px;
   outline: none;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 @media (min-width: 768px) {
