--- a/src/style.css
+++ b/src/style.css
@@ -2,11 +2,6 @@
   min-width: 320px;
   padding: 30px 0 50px;
   text-align: center;
-  font-size: var(--ui-text-size);
-  color: var(--ui-text-color);
-  line-height: var(--ui-text-line-height);
-  font-family: var(--ui-text-font-family);
-  font-weight: var(--ui-text-font-weight);
   word-wrap: break-word;
 }
 
@@ -32,11 +27,6 @@
   width: 100%;
   max-width: 770px;
   margin: 15px auto 0;
-  font-size: var(--ui-subtitle-size);
-  color: var(--ui-subtitle-color);
-  line-height: var(--ui-subtitle-line-height);
-  font-family: var(--ui-subtitle-font-family);
-  font-weight: var(--ui-subtitle-font-weight);
 }
 
 @media (min-width: 768px) {
@@ -115,10 +105,6 @@
 
 .item__title {
   font-size: calc(var(--ui-hero-title-size) * .8);
-  color: var(--ui-hero-title-color);
-  line-height: var(--ui-hero-title-line-height);
-  font-family: var(--ui-hero-title-font-family);
-  font-weight: var(--ui-hero-title-font-weight);
 }
 
 @media (min-width: 768px) {
@@ -248,6 +234,7 @@
 }
 
 .button {
+  width: 100%;
   margin-top: 60px;
 
   @media (min-width: 480px) {
