--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,34 @@
 @import "wireframe-zapdos-cta/src/style.css";
 
 /* start here */
+.section {
+
+  @media (min-width: 992px) {
+    padding: 90px 0;
+  }
+}
+
+.title {
+  font-size: calc(var(--ui-block-title-size) * 0.7);
+  margin-bottom: 40px;
+
+  @media (min-width: 992px) {
+    font-size: var(--ui-block-title-size);
+  }
+}
+
+.description {
+  font-family: var(--ui-subheading-font-family);
+  font-weight: 700;
+  font-size: var(--ui-subheading-size);
+  color: var(--ui-subheading-color);
+  margin-bottom: 60px;
+}
+
+.button {
+  font-weight: 700;
+
+  &:hover {
+    font-weight: 700;
+  }
+}
