--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,76 @@
 @import "wireframe-zapdos-blog/src/style.css";
 
 /* start here */
+.article {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.article__picture-wrapper {
+  order: 1;
+}
+
+.article__title {
+  order: 2;
+  font-family: var(--ui-subheading-font-family);
+  font-weight: var(--ui-subheading-font-weight);
+  letter-spacing: -1px;
+}
+
+.article__meta {
+  order: 3;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: flex-end;
+}
+
+.article__picture {
+  overflow: hidden;
+  border-radius: 25px;
+}
+
+.article__date {
+  padding-left: 0;
+  padding-right: 7px;
+  color: #b6c0cd;
+}
+
+.article__category + .article__date::after {
+  right: 0;
+  left: inherit;
+}
+
+.article__category {
+  padding-right: 0;
+  padding-left: 7px;
+  color: var(--ui-dark-shade-color);
+}
+
+.article__text {
+  order: 4;
+  color: #7d848d;
+}
+
+.article__link {
+  order: 5;
+  text-align: left;
+  font-size: calc(var(--ui-text-size) * 1.066);
+  font-weight: var(--ui-hero-title-font-weight);
+}
+
+@media (min-width: 768px) {
+  .article {
+    flex-basis: 100%;
+    max-width: 100%;
+  }
+
+  .article__picture {
+    padding-top: 35%;
+  }
+}
+
+@media (min-width: 992px) {
+  .article__picture {
+    padding-top: 84%;
+  }
+}
