--- a/src/style.css
+++ b/src/style.css
@@ -8,8 +8,21 @@
   max-width: 470px;
 
   @media (min-width: 992px) {
-    margin-left: 50%;
+    transform: translateX(55%);
   }
+}
+
+.section__header {
+
+  @media (min-width: 992px) {
+    padding-top: 65px;
+  }
+}
+
+.title {
+  font-size: var(--ui-heading-lg-size);
+  color: var(--ui-light-shade-color);
+  margin-bottom: 30px;
 }
 
 .subtitle {
@@ -35,18 +48,19 @@
     border-radius: 30px;
     padding-left: 30px;
     padding-right: 30px;
+    margin-top: 0;
     font-size: var(--ui-text-size);
     font-weight: var(--ui-subheading-font-weight);
     color: var(--ui-light-shade-color);
     background-color: var(--ui-brand-color);
     border: 1px solid var(--ui-light-shade-color);
 
-    @media (min-width: 992px) {
-      margin-top: 0;
-    }
-
     &::placeholder {
       color: var(--ui-light-shade-color);
     }
+  }
+
+  &__button {
+    margin-top: 0;
   }
 }
