--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,75 @@
 @import "wireframe-zapdos-blog/src/style.css";
 
 /* start here */
+.article {
+  display: flex;
+  justify-content: flex-start;
+
+  &__title {
+    order: 2;
+    font-family: var(--ui-subheading-font-family);
+    font-weight: var(--ui-subheading-font-weight);
+    letter-spacing: -1px;
+  }
+
+  &__meta {
+    order: 3;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-end;
+  }
+
+  &__picture {
+    overflow: hidden;
+    border-radius: 25px;
+
+    &-wrapper {
+      order: 1;
+    }
+  }
+
+  &___category {
+    padding-right: 0;
+    padding-left: 7px;
+    color: var(--ui-dark-shade-color);
+  }
+
+  &__text {
+    order: 4;
+    color: #7d848d;
+  }
+
+  &__link {
+    order: 5;
+    text-align: left;
+    font-size: calc(var(--ui-text-size) * 1.066);
+    font-weight: var(--ui-hero-title-font-weight);
+  }
+}
+
+.article .article__date {
+  padding-left: 0;
+  padding-right: 7px;
+  color: #b6c0cd;
+}
+
+.article__category + .article__date::after {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .article {
+    flex-basis: 100%;
+    max-width: 100%;
+  }
+
+  .article__picture {
+    padding-top: 35%;
+  }
+}
+
+@media (min-width: 992px) {
+  .article__picture {
+    padding-top: 84%;
+  }
+}
