--- a/src/style.css
+++ b/src/style.css
@@ -4,29 +4,47 @@
 .article {
   display: flex;
   justify-content: flex-start;
-}
 
-.article__picture-wrapper {
-  order: 1;
-}
+  &__title {
+    order: 2;
+    font-family: var(--ui-subheading-font-family);
+    font-weight: var(--ui-subheading-font-weight);
+    letter-spacing: -1px;
+  }
 
-.article__title {
-  order: 2;
-  font-family: var(--ui-subheading-font-family);
-  font-weight: var(--ui-subheading-font-weight);
-  letter-spacing: -1px;
-}
+  &__meta {
+    order: 3;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-end;
+  }
 
-.article__meta {
-  order: 3;
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: flex-end;
-}
+  &__picture {
+    overflow: hidden;
+    border-radius: 25px;
 
-.article__picture {
-  overflow: hidden;
-  border-radius: 25px;
+    &-wrapper {
+      order: 1;
+    }
+  }
+
+  &__text {
+    order: 4;
+    color: #7d848d;
+  }
+
+  &__category {
+    padding-right: 0;
+    padding-left: 7px;
+    color: var(--ui-dark-shade-color);
+  }
+
+  &__link {
+    order: 5;
+    text-align: left;
+    font-size: calc(var(--ui-text-size) * 1.066);
+    font-weight: var(--ui-hero-title-font-weight);
+  }
 }
 
 .article__date {
@@ -38,24 +56,6 @@
 .article__category + .article__date::after {
   right: 0;
   left: inherit;
-}
-
-.article__category {
-  padding-right: 0;
-  padding-left: 7px;
-  color: var(--ui-dark-shade-color);
-}
-
-.article__text {
-  order: 4;
-  color: #7d848d;
-}
-
-.article__link {
-  order: 5;
-  text-align: left;
-  font-size: calc(var(--ui-text-size) * 1.066);
-  font-weight: var(--ui-hero-title-font-weight);
 }
 
 @media (min-width: 768px) {
