--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,34 @@
 @import "wireframe-zapdos-why/src/style.css";
 
+.title {
+  margin: 0;
+  letter-spacing: -1px;
+}
+
 .item {
+  display: flex;
+  align-items: center;
+  padding: 0;
+
+  &__top-element {
+    margin: 0;
+    margin-right: 18px;
+  }
+
   &__title {
     text-align: left;
+    font-size: var(--ui-subheading-size);
+    font-weight: var(--ui-subheading-font-weight);
   }
+}
+
+.item:nth-child(1) .item__top-element,
+.item:nth-child(2) .item__top-element {
+  width: 82px;
+}
+
+.item:nth-child(3) .item__top-element,
+.item:nth-child(4) .item__top-element {
+  width: 70px;
+  margin-right: 30px;
 }
