--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,32 @@
 @import "wireframe-zapdos-cta/src/style.css";
 
 /* start here */
+.title {
+  font-size: var(--ui-hero-title-size);
+  letter-spacing: calc(var(--ui-hero-title-letter-spacing)*1.6);
+  line-height: var(--ui-hero-title-line-height);
+  font-weight: var(--ui-hero-title-font-weight);
+  margin-bottom: 38px;
+}
+
+.section {
+  padding-top: 320px;
+
+  &__inner {
+
+    @media (min-width: 992px) {
+      max-width: 620px;
+    }
+  }
+}
+
+.description {
+  font-family: var(--ui-subtitle-font-family);
+  font-size: var(--ui-subtitle-size);
+  line-height: var(--ui-subtitle-line-height);
+  font-weight: var(--ui-subtitle-font-weight);
+}
+
+.button {
+  text-transform: uppercase;
+}
