--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,27 @@
 @import "wireframe-zapdos-cta/src/style.css";
 
-/* start here */
+.title {
+  font-weight: var(--ui-hero-title-font-weight);
+  font-family: var(--ui-hero-title-font-family);
+  font-size: calc(var(--ui-hero-title-size)* 2);
+  letter-spacing: var(--ui-hero-title-letter-spacing);
+  line-height: var(--ui-hero-title-line-height);
+  color: #a7a7a7;
+}
+
+.description {
+  font-family: var(--ui-block-title-font-family);
+  font-weight: var(--ui-block-title-font-weight);
+  font-size: var(--ui-block-title-size);
+  line-height: var(--ui-block-title-line-height);
+  letter-spacing: var(--ui-block-title-letter-spacing);
+  color: #252629;
+}
+
+.button {
+  font-weight: var(--ui-caption-font-weight);
+  font-family: var(--ui-caption-font-family);
+  font-size: var(--ui-caption-size);
+  color: var(--ui-light-shade-color);
+  text-transform: uppercase;
+}
