--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,12 @@
 @import "wireframe-zapdos-cta/src/style.css";
 
-/* start here */
+.description {
+  font-family: var(--ui-subtitle-font-family);
+  font-size: var(--ui-subtitle-size);
+  font-weight: var(--ui-block-title-font-weight);
+  letter-spacing: var(--ui-subtitle-letter-spacitng);
+}
+
+.button {
+  text-transform: uppercase;
+}
