--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,31 @@
 @import "wireframe-zapdos-process/src/style.css";
 
-/* start here */
+.title {
+  font-weight: calc(var(--ui-block-title-font-weight) + 200);
+  letter-spacing: var(--ui-block-title-letter-spacitng);
+}
+
+.article {
+  &__content {
+    padding-left: 53px;
+
+    &::before {
+      top: -3px;
+      background-color: var(--ui-light-shade-color);
+      color: #c7c7c7;
+      font-family: var(--ui-heading-font-family);
+      font-size: var(--ui-heading-size);
+      font-weight: var(--ui-block-title-font-weight);
+    }
+  }
+
+  &__title {
+    font-weight: calc(var(--ui-block-title-font-weight) + 100);
+    letter-spacing: var(--ui-block-title-letter-spacitng);
+  }
+}
+
+.button {
+  font-weight: calc(var(--ui-block-title-font-weight) + 200);
+  text-transform: uppercase;
+}
