--- a/src/style.css
+++ b/src/style.css
@@ -22,21 +22,29 @@
 }
 
 .title {
-  font-weight: 600;
-  line-height: 1;
-  letter-spacing: -2.2px;
+  max-width: 575px;
+  margin-right: auto;
+  margin-left: auto;
+  font-size: calc(var(--ui-block-title-size) * 1.5);
+  font-weight: var(--ui-hero-title-font-weight);
+  line-height: var(--ui-hero-title-line-height);
+  letter-spacing: calc(var(--ui-hero-title-letter-spacing) * 1.7);
+  
 
   @media (min-width: 992px) {
-    margin-bottom: 40px;
-    font-size: calc(var(--ui-block-title-size) * 2);
+    max-width: 770px;
+    margin-bottom: 38px;
+    font-size: var(--ui-hero-title-size);
   }
 }
 
 .description {
-  font-weight: 500;
-  letter-spacing: -0.1px;
-
-  @media (min-width: 992px) {
-    font-size: calc(var(--ui-text-size) * 1.13);
-  }
+  max-width: 640px;
+  margin-right: auto;
+  margin-left: auto;
+  font-family: var(--ui-subtitle-font-family);
+  font-size: var(--ui-subtitle-size);
+  font-weight: var(--ui-subtitle-font-weight);
+  line-height: var(--ui-subtitle-line-height);
+  letter-spacing: -0.3px;
 }
